# Math

./: CMakeLists.txt  CODE__OF__CONDUCT_8md.html  Doxyfile  README_8md.html  annotated.html  classNumLib_1_1GaussLegendreIntegration-members.html  classNumLib_1_1GaussLegendreIntegration.html  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial-members.html  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial.html  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial_a0c8e330864006da693dfc38481992d5b_cgraph.map  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial_a0c8e330864006da693dfc38481992d5b_cgraph.md5  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial_a0e5b3fcb15b8179980e387d5457271c3_icgraph.map  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial_a0e5b3fcb15b8179980e387d5457271c3_icgraph.md5  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial_aa8495b622f751c3f7b8428404d444c92_icgraph.map  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial_aa8495b622f751c3f7b8428404d444c92_icgraph.md5  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial_aaf596c23cd4d28685b58a28997e6d738_icgraph.map  classNumLib_1_1GaussLegendreIntegration_1_1LegendrePolynomial_aaf596c23cd4d28685b58a28997e6d738_icgraph.md5  classNumLib_1_1GaussLegendreIntegration_ab199c7f6b6e06b485ed2507a24430b82_cgraph.map  classNumLib_1_1GaussLegendreIntegration_ab199c7f6b6e06b485ed2507a24430b82_cgraph.md5  classes.html  ctest2JUnit_8py.html  dir_000000_000002.html  dir_428b30bd0555e2be51fb89aa08b052a5.html  files.html  (+58 more)
(+55 files in other folders)
